--- a/app-mmf/src/app/core/components/auth/signin/signin.component.html
+++ b/app-mmf/src/app/core/components/auth/signin/signin.component.html
@@ -1,29 +1,28 @@
-<div class="row">
-  <div class="center">
-    <img src="/assets/img/logoMMf.png" alt="image" class="img">
-    <h2>Se connecter</h2>
-    <form [formGroup]="signinForm" (ngSubmit)="onSubmit()">
-      <div class="form-group">
-        <label for="email">Adresse mail</label>
-        <input type="text"
-               id="email"
-               class="form-control"
-               formControlName="email">
-      </div>
-      <div class="form-group">
-        <label for="password">Mot de passe</label>
-        <input type="password"
-               id="password"
-               class="form-control"
-               formControlName="password">
-        <a routerLink="/auth/signup">S'inscrire</a>
-      </div>
-      <button class="btn btn-primary"
-              type="submit"
-              [disabled]="signinForm.invalid">
-        Se connecter
-      </button>
-    </form>
-    <p class="text-danger">{{ errorMessage }}</p>
-  </div>
+<div class="center">
+
+  <h2>Se connecter</h2>
+  <form (ngSubmit)="onSubmit()" [formGroup]="signinForm">
+    <div class="form-group">
+      <label for="email">Adresse mail</label>
+      <input class="form-control"
+             formControlName="email"
+             id="email"
+             type="text">
+    </div>
+    <div class="form-group">
+      <label for="password">Mot de passe</label>
+      <input class="form-control"
+             formControlName="password"
+             id="password"
+             type="password">
+      <a routerLink="/auth/signup">S'inscrire</a>
+    </div>
+    <button [disabled]="signinForm.invalid"
+            class="btn btn-primary"
+            type="submit">
+      Se connecter
+    </button>
+  </form>
+  <p class="text-danger">{{ errorMessage }}</p>
 </div>
+
