--- a/app-mmf/src/app/core/components/auth/signup/signup.component.html
+++ b/app-mmf/src/app/core/components/auth/signup/signup.component.html
@@ -1,29 +1,29 @@
 <div class="row">
   <div class="center">
-    <img src="/assets/img/logoMMf.png" alt="image" class="img">
+    <img alt="image" class="img">
     <h2>Créer un compte</h2>
-    <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+    <form (ngSubmit)="onSubmit()" [formGroup]="signupForm">
       <div class="form-group">
         <label for="email">Adresse mail</label>
-        <input type="text"
+        <input class="form-control"
+               formControlName="email"
                id="email"
-               class="form-control"
-               formControlName="email">
+               type="text">
       </div>
       <div class="form-group">
         <label for="password">Mot de passe</label>
-        <input type="password"
+        <input class="form-control"
+               formControlName="password"
                id="password"
-               class="form-control"
-               formControlName="password">
+               type="password">
       </div>
-      <button class="btn btn-primary"
-              type="submit"
-              [disabled]="signupForm.invalid">
+      <button [disabled]="signupForm.invalid"
+              class="btn btn-primary"
+              type="submit">
         Créer mon compte
       </button>
     </form>
     <p class="text-danger">{{ errorMessage }}</p>
   </div>
 </div>
- 
+
