add ng translate package

--- a/app-mmf/src/app/styles.css
+++ b/app-mmf/src/app/styles.css
@@ -3,4 +3,5 @@
 @import '~@angular/material/prebuilt-themes/pink-bluegrey.css';
 @import '~@angular/material/prebuilt-themes/purple-green.css';
 */
-@import '~@angular/material/prebuilt-themes/purple-green.css';
+/*@import '~@angular/material/prebuilt-themes/purple-green.css';*/
+@import '~@angular/material/prebuilt-themes/pink-bluegrey.css';
